Remove node_modules

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 export SecretKey="Th3G0d5L1v34M0Ng5T1_15"
+export dbURI="postgres://martinmuguna:@localhost:5432//usr/local/var/postgres/node-stackoverflowlite"
 pg_ctl -D /usr/local/var/postgres start
 node server.js
